fixed gap in background image

--- a/src/app/components/screens/home/Home.module.scss
+++ b/src/app/components/screens/home/Home.module.scss
@@ -7,7 +7,7 @@
   color: white;
   max-height: fit-content;
   min-height: 90vh;
-  background-size: 175vw;
+  background-size: 125vw;
   margin-bottom: -2px;
 
   @media (max-width: 820px) {
