--- a/src/app/components/screens/skills/Skills.module.scss
+++ b/src/app/components/screens/skills/Skills.module.scss
@@ -18,13 +18,22 @@
 }
 
 .container {
-  background-color: $white;
   position: relative;
-  margin-bottom: -3px;
+  background-color: $white;
+}
+.background {
   background-image: url('../../../assets/svgs/wave (1).svg');
   background-position: bottom;
   background-repeat: no-repeat;
-  background-size: 110vw;
+
+  position: absolute;
+  z-index: 0;
+  min-width: 100%;
+  min-height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: -1px;
 }
 .content {
   position: relative;
